# ddlpy

./: .bumpversion.cfg  .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: jekyll-gh-pages.yml  pytest.yml  sphinx-docs  sphinx-docs.yml
ddlpy/: __init__.py  cli.py  ddlpy.py  endpoints.json  utils.py  waterinfo.py
ddlpy2/: __init__.py  cli.py  ddlpy2.py  utils.py  waterinfo.py
docs/: Makefile  conf.py  ddlpy.rst  index.rst  installation.rst  make.bat  minimal_example.rst  modules.rst  readme.rst  usage.rst
docs/examples/: minimal_example.py  retrieve_parallel_to_netcdf.py
docs/notebooks/: Waterwebservices-ddlpy.ipynb  measurements.ipynb  postrequests-versus-ddlpy.ipynb  waterinfo.ipynb
examples/: 1_get_data_from_waterInfo_parallel.py  2_get_netcdf.py  createReadme.py  ddlpy_to_xarray.py  minimal_example.py  retrieve_parallel_to_netcdf.py  waterinfo_test.py
notebooks/: measurements.ipynb  waterinfo.ipynb
tests/: 20200608_069_20200507.csv  NVT_WATHTE_SCHE_20200507.csv  bulk.json  test_cli.py  test_ddlpy.py  test_endpoints.py  test_utils.py  test_waterinfo.py
