[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rws-ddlpy"
version = "0.7.0"
maintainers = [
	{ name = "Fedor Baart", email = "fedor.baart@deltares.nl"},
	{ name = "Jelmer Veenstra", email = "jelmer.veenstra@deltares.nl"},
]
description = "Service from Rijkswaterstaat for distributing water quantity data."
readme = "README.md"
keywords = ["ddlpy"]
license = { text = "GPLv3" }
requires-python = ">=3.8"
dependencies = [
	#numpy 1.21 is EOL since june 2023
	"numpy>=1.22",
	"pandas",
	"python-dateutil>=2.8",
	"pytz",
	"tqdm",
	"click",
	"requests",
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

[project.urls]
Home = "https://github.com/deltares/ddlpy"
Code = "https://github.com/deltares/ddlpy"
Issues = "https://github.com/deltares/ddlpy/issues"

[project.optional-dependencies]
dev = [
	"bump2version>=0.5.11",
	"flake8",
	"pytest>=3.8.2",
	"pytest-cov",
	"twine",
	"build",
	"flake8>=3.5.0",
	"tox>=3.5.2",
	"twine>=1.12.1",
]
docs = [
	"sphinx>=1.8.1",
	"sphinx_mdinclude",
	"nbsphinx",
	"pydata-sphinx-theme",
	#"pandoc", # installed with choco on github
]
examples = [
	"jupyter",
	"notebook",
	"matplotlib",
]
netcdf = [
	"xarray",
	"h5netcdf",
]

[project.scripts]
ddlpy = "ddlpy.cli:cli"

[tool.setuptools]
packages = ["ddlpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--durations=0"
filterwarnings = [
	"error",
	]

[tool.flake8]
exclude = "docs"
